# ExamBuilder

./: .gitignore  setup.cfg  whitelist.txt
src/ExamBuilder/: __init__.py  _directory_reader.py  _latex_creator.py  _main.py  _question.py  _question_reader.py
src/ExamBuilder/ressources/: exam_grading_template.tex  exam_head_template.tex  exam_question_template.tex  exam_template.tex
test_data/20231031_example.course_example.name_example.class/: G_kompetenz_A_50_00.tex  G_kompetenz_A_50_01.tex  V_kompetenzA_50.tex  kompetenzB_50_00.tex
tests/: test_directory_reader_00.py  test_latex_creator_00.py  test_question_00.py  test_question_reader_00.py
