[metadata]
name = ExamBuilder
author = Robert Ulmer
author_email = rulmer@lr.htlweiz.at
description = Create exam pdf.
version = 1.0.0
url = https://github.com
keywords = logging
	pytest
	school
	file 
	parser
	output
	input

license_files =
	LICENSE.txt

[options]
python_requires >= 3.8
package_dir =
  =src
packages = find:
zip_safe = false


[options.entry_points]
console_scripts =
    exam_builder = ExamBuilder:main 

[options.extras_require]
dev=
	pytest
	flake8
	flake8_builtins
	flake8_isort
	flake8_spellcheck
	flake8_variables_names
	autopep8
	rope
	doq
	isort

[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = INFO
